# franka_panda_description

./: CMakeLists.txt  package.xml
env_hooks/: franka_panda_description_env.sh.in
robots/: hand.xacro  panda_arm.xacro  panda_arm_hand.urdf.xacro
ros2_control/: franka_panda_torque.ros2_control.xacro  franka_panda_torque.urdf.xacro
