<?xml version="1.0"?>
<package>
  <name>franka_panda_description</name>
  <version>0.0.1</version>
  <description>
    Description of Panda Robot from Franka Emika.
    This package contains the URDF and meshes describing Panda for Gazebo simulator.
  </description>

  <maintainer email="sxs1412@bham.ac.uk">
    Saif Sidhik
  </maintainer>
  <license>TODO</license>

  <author>Saif Sidhik</author>

  <buildtool_depend>ament_cmake</buildtool_depend>

</package>
